<resources>
    <string name="app_name">Pixil</string>
    <string name="facebook_app_id" translatable="false">486795755200730</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb486795755200730</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">360542f22ee0a1231737e4e372419c65</string>
    <string name="AK_LOGIN_PROTOCOL_SCHEME" translatable="false">ak360542f22ee0a1231737e4e372419c65</string>
    <string name="default_album_cover" translatable="false">https://static.xx.fbcdn.net/rsrc.php/v3/yO/r/7q6AXSKeuBG.png</string>
    <string name="terms"><u>Terms of Service</u></string>
    <string name="privacy"><u>Privacy Policy</u></string>
    <string name="activity_title_main">Photo Edit</string>
    <string name="action_settings">Settings</string>
    <string name="filters">Filter</string>
    <string name="editc">Edit</string>
    <string name="lbl_brightness">Brightness</string>
    <string name="lbl_contrast">Contrast</string>
    <string name="lbl_saturation">Saturation</string>
    <string name="tab_filters">Filter</string>
    <string name="tab_edit">Edit</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="filter_normal">Normal</string>
    <string name="action_save">Save</string>
    <string name="action_open">Open</string>
    <string name="home_cap1">Pixil is amazing\n and simple to use</string>
    <string name="home_cap2">Buy 3 pixils for ₮50,000</string>
    <string name="home_cap3">Each additional pixil is ₮15,000</string>
    <string name="home_cap4">Shipping is free</string>
    <string name="home_cap5">Thousands of pixils printed</string>
    <string name="home_cap6">Amazing Wall Arts</string>
    <string name="home_cap7">What is Pixil?</string>
    <string name="home_cap8">Modern wall art that decorates your home without damaging your wall.\nPixil is removable, reusable \nand leaves no marks on the wall.\nPixil size is 20 x 20cm.</string>
    <string name="home_cap9">Let\'s make amazing wall arts \nwith your photos</string>
    <string name="home_cap10">Let\'s Order</string>
    <string name="menu1">My Orders</string>
    <string name="menu2">Frequent Questions</string>
    <string name="menu3">Contact Us</string>
    <string name="menu4">Settings</string>
    <string name="menu5">Legal</string>
    <string name="menu6">Add Promo Code</string>
    <string name="add_address">Add Address</string>
    <string name="submit">Submit</string>
    <string name="ship_to">Ship To</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address_line">Address(Include Apt/Unit, Street Name)</string>
    <string name="distric_line">District, Khoroo</string>
    <string name="city">City</string>
    <string name="zipcode">Zip Code</string>
    <string name="province">Province</string>
    <string name="change_password">Change Password</string>
    <string name="email_address">Email Address</string>
    <string name="new_password">New Password</string>
    <string name="verification_code">Verification Code</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="pixils_">Pixils:</string>
    <string name="shipping_address_">Shipping Address:</string>
    <string name="estimated_delivery_date_">Estimated Delivery Date:</string>
    <string name="pixilset">Pixil Set</string>
    <string name="additionalpixils">Additional Pixils</string>
    <string name="shipping">Shipping</string>
    <string name="total">Total</string>
    <string name="free">FREE</string>
    <string name="complete_order">Checkout</string>
    <string name="contactus_cap">Hi! Ask us anything, we\'ll get back to you as soon as we can, usually within a few hours.</string>
    <string name="type_message">Type a message...</string>
    <string name="filters2">Photo Edit</string>
    <string name="crop">Adjust</string>
    <string name="save">Save</string>
    <string name="forgot_passwordc">Forgot Password</string>
    <string name="forgot_password_cap">Please enter your email for authorization.\nWe will send you a verification code.</string>
    <string name="shipping_free">Shipping is Free</string>
    <string name="contactus">Contact Us</string>
    <string name="thank_you">Thank you</string>
    <string name="orderplacedcap">Your order has been successfully completed!</string>
    <string name="order_number_">Order number:</string>
    <string name="order_number2_">Order Number:</string>
    <string name="home">Home</string>
    <string name="myorders">My Orders</string>
    <string name="policy">Privacy Policy</string>
    <string name="add_promo_code">Add Promo Code</string>
    <string name="code">Code</string>
    <string name="q1">What is Pixil?</string>
    <string name="a1">Modern wall art that decorates your home without damaging your wall. Pixil is removable, reusable and leaves no marks on the wall.</string>
    <string name="q2">How big is the pixil?</string>
    <string name="a2">Our pixil is 20cm by 20cm and thickness is about 8mm.</string>
    <string name="q3">How much does Pixil cost?</string>
    <string name="a3">Your first 3 pixils cost ₮50,000 and then every additional pixil in your order costs ₮15,000 each. For example, 5 pixils would be ₮80,000.</string>
    <string name="q4">How many pixils can I order?</string>
    <string name="a4">You can order as many pixils as you want. But you need to order a minimum of 3 pixils per order. </string>
    <string name="q5">When will I receive my pixils?</string>
    <string name="a5">Your pixils will arrive in about 3-5 days. (Your pixils will be delivered within 2 weeks in remote provinces and soums.)</string>
    <string name="q6">How much is shipping?</string>
    <string name="a6">Shipping is free.</string>
    <string name="q7">Do you ship internationally?</string>
    <string name="a7">Currently, our pixils can only be shipped to addresses in Mongolia.</string>
    <string name="q8">Where are the pixils made?</string>
    <string name="a8">All of our pixils are made in Mongolia to the highest quality standard.</string>
    <string name="q9">How do I hang a pixil on walls?</string>
    <string name="a9">It\’s simple. Each pixil comes with adhesive pad stuck to the back. Please peel off the protective film on the pad. Then firmly press the pixil onto the wall. </string>
    <string name="q10">Will any type of wall work?</string>
    <string name="a10">Our pixils stick to the majority of the wall surfaces that are clean, dry and smooth without dirt or dust. However, we don\’t recommend you to stick them on wallpaper with an embossed pattern or bump wall.</string>
    <string name="q11">Can I remove a pixil once it\’s on the wall?</string>
    <string name="a11">Absolutely! Just pull gently towards you from the lower part of the pixil and it will come right off the wall. They are super durable, you don\’t have to worry about damaging a pixil when you remove it.</string>
    <string name="q12">Is there a minimum photo resolution recommended?</string>
    <string name="a12">It should be at least 800 by 800 pixels. Any lower resolution photos will result in blurry and grainy pixil.</string>
    <string name="q13">What happens if I accidentally spray water on the pixil?</string>
    <string name="a13">Don\’t worry. Nothing will happen to your pixil. Each pixil is digitally printed on high-quality material in a professional environment with a fade-resistant and water-resistant coating.</string>
    <string name="select_photos">Select Photos</string>
    <string name="allphotos">All Photos</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="google">Google</string>
    <string name="getphotosfromanywhere">Get Photos From Anywhere</string>
    <string name="getphotosfromfacebook">Get Photos From Facebook</string>
    <string name="googlephotos">Google Photos</string>
    <string name="connected">Connected</string>
    <string name="select_3photos">Select 3+ pixils</string>
    <string name="selectphotoscap">3 pixils are ₮50,000</string>
    <string name="selectphotoscap2">Select 3+ pixils</string>
    <string name="are">are</string>
    <string name="select">Select</string>
    <string name="more">more</string>
    <string name="stylephotos">Style Photos</string>
    <string name="welcome">Welcome to Pixil</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="forgot_password">Forgot Your Password?</string>
    <string name="newsignup">New here? Signup</string>
    <string name="createaccount">Create an Account</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="ifyouhave">If you already have account</string>
    <string name="and">and</string>
    <string name="cloudphotos">Cloud Photos</string>
    <string name="selectphotostoedit">Select Photo to Edit</string>
    <string name="checkout">Continue My Order</string>
    <string name="selectaddress">Select an address</string>
    <string name="newaddress">New address</string>
    <string name="addshippingaddress">Add Shipping Address</string>
    <string name="continuemyorder">Continue My Order</string>
    <string name="termsofuse">Terms of Service</string>
    <string name="dismiss">Dismiss</string>
    <string name="lowimagequality">Low Image Quality</string>
    <string name="lowimagequalitycap">You selected low resolution image. It would be best to select a different image.</string>
    <string name="dontselect">Don\'t Select</string>
    <string name="selectanyway">Select Anyway</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="mongolian">Mongolian</string>
    <string name="copies">Copies</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="enterfullname">Enter full name.</string>
    <string name="enterphonenumber">Enter phone number.</string>
    <string name="enteraddress">Enter address.</string>
    <string name="enterdistrict">Enter district.</string>
    <string name="entercityname">Enter city name.</string>
    <string name="enterzipcode">Enter zip code.</string>
    <string name="enterprovince">Enter province.</string>
    <string name="enteremail">Enter your email.</string>
    <string name="enterpassword">Enter your new password.</string>
    <string name="enterverificationcode">Enter verification code.</string>
    <string name="passwordchanged">Your password has been changed.</string>
    <string name="submitfailed">Submit failed.</string>
    <string name="waitwhileordering">Please wait while we are processing your order</string>
    <string name="orderplaced">Order placed</string>
    <string name="serverissue">Server issue</string>
    <string name="istyping">is typing ...</string>
    <string name="sharevia">Share via</string>
    <string name="sentpicture">Sent a picture.</string>
    <string name="sharedpicture">Shared a picture</string>
    <string name="unablesaveimage">Unable to save image!</string>
    <string name="permissionnotgranted">Permissions are not granted!</string>
    <string name="noexistingemail">No exists such email.</string>
    <string name="ordered_">Ordered:</string>
    <string name="shipped_">Order Status:</string>
    <string name="deliveryby_">Delivery by:</string>
    <string name="registered">Registered</string>
    <string name="choose3photos">Please choose at least 3 photos.</string>
    <string name="invalidemail">The email is invalid.</string>
    <string name="signedin">Signed In</string>
    <string name="loginfailed">Login failed.</string>
    <string name="invalidlogin">Invalid login.</string>
</resources>