<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity"
    android:background="@color/white"
    tools:context=".main.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/logo_110"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/createaccount"
                    android:gravity="center"
                    android:padding="25dp"
                    android:textColor="@color/text"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edt_firstname"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="center_vertical"
                        android:background="@drawable/light_blue_round_fill"
                        android:paddingLeft="25dp"
                        android:paddingRight="15dp"
                        android:inputType="textCapWords"
                        android:textColor="@color/text"
                        android:textColorHint="@color/gray"
                        android:textSize="16sp"
                        android:hint="@string/firstname"/>

                    <EditText
                        android:id="@+id/edt_lastname"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="center_vertical"
                        android:background="@drawable/light_blue_round_fill"
                        android:paddingLeft="25dp"
                        android:paddingRight="15dp"
                        android:inputType="textCapWords"
                        android:textColor="@color/text"
                        android:textColorHint="@color/gray"
                        android:textSize="16sp"
                        android:hint="@string/lastname"/>

                    <EditText
                        android:id="@+id/edt_email"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="center_vertical"
                        android:background="@drawable/light_blue_round_fill"
                        android:paddingLeft="25dp"
                        android:paddingRight="15dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/text"
                        android:textColorHint="@color/gray"
                        android:textSize="16sp"
                        android:hint="@string/email_address"/>

                    <EditText
                        android:id="@+id/edt_phone"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="center_vertical"
                        android:background="@drawable/light_blue_round_fill"
                        android:paddingLeft="25dp"
                        android:paddingRight="15dp"
                        android:inputType="phone"
                        android:textColor="@color/text"
                        android:textColorHint="@color/gray"
                        android:textSize="16sp"
                        android:hint="@string/phone_number"/>

                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="center_vertical"
                        android:background="@drawable/light_blue_round_fill"
                        android:paddingLeft="25dp"
                        android:paddingRight="15dp"
                        android:inputType="textPassword"
                        android:textColor="@color/text"
                        android:textColorHint="@color/gray"
                        android:textSize="16sp"
                        android:hint="@string/password"/>

                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/red_round_fill"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:onClick="signup"
                    android:textSize="16sp"
                    android:text="@string/signup"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/ifyouhave"
                    android:gravity="center"
                    android:padding="25dp"
                    android:textColor="@color/text"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/blue_round_fill"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:onClick="toSignin"
                    android:textSize="16sp"
                    android:text="@string/signin"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/termsButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text"
                        android:layout_margin="5dp"
                        android:textSize="14sp"
                        android:text="@string/terms"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text"
                        android:textSize="14sp"
                        android:layout_margin="5dp"
                        android:text="@string/and"/>

                    <TextView
                        android:id="@+id/privacyButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text"
                        android:textSize="14sp"
                        android:layout_margin="5dp"
                        android:text="@string/privacy"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loading_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:indicator="LineScaleParty"
        app:indicator_color="#F53700" />

</FrameLayout>
























