<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_white_fill"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/language"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.0dp"
            android:background="#F0F0F0"/>

        <TextView
            android:id="@+id/enButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/question"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/english"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.0dp"
            android:background="#F0F0F0"/>

        <TextView
            android:id="@+id/mnButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/question"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/mongolian"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.0dp"
            android:background="#F0F0F0"/>

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_option_menu"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/dismiss"/>

    </LinearLayout>

</FrameLayout>





























